# aws_glacier_demo_client

./: Cargo.toml  LICENSE  README.md
.github/workflows/: blank.yml
src/: aws_client.rs  file_checksum.rs  main.rs
src/aws_client/: mod.rs
src/file_checksum/: mod.rs
