[package]
name = "aws_glacier_uploader"
version = "0.1.0"
authors = ["touri"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
clap = "2.33.0"
data-encoding = "2.2.0"
sha2 = "0.8.1"
rusoto_core = "0.43.0"
rusoto_glacier = "0.43.0"