[package]
name = "aws_glacier_uploader"
version = "0.1.0"
authors = ["touri"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
clap = "2.33.0"
digest = "0.8.1"
data-encoding = "2.2.0"
generic-array = "0.14.1"
sha2 = "0.8.1"
rusoto_core = "0.43.0"
rusoto_glacier = "0.43.0"
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3.5"